--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "usestate": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
